# Adversarial-Swarm

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  ANALYSIS_SUMMARY.txt  ARCHITECTURE.md  CHANGELOG.md  CODE_QUALITY_COMPLETION.md  CODE_QUALITY_SUMMARY.txt  COMPLETE_SYSTEM_OVERVIEW.md  COMPLETION_REPORT.md  CONTRIBUTING.md  DEEPER_ANALYSIS_REPORT.md  Dockerfile  FINAL_SUMMARY.md  FINAL_TASK_SUMMARY.md  IMPLEMENTATION_4_LAYER_ENCODING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MERGE_RESOLUTION.md  MITRE_INTEGRATION_SUMMARY.md  Makefile  PERFORMANCE_OPTIMIZATIONS.md  PERFORMANCE_RECOMMENDATIONS.md  PR_REVIEW_RESOLUTION.md  README.md  README_API.md  README_SECURITY.md  SECURITY_INTEGRATION_STATUS.md  SYSTEM_SUMMARY.md  ULTIMATE_COMPLETION_SUMMARY.md  UPGRADE_SUMMARY.md  apply_security_to_all_modules.py  complete_security_integration.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml  (+8 more)
.Jules/: palette.md
.github/: dependabot.yml
.github/instructions/: *.instructions.md  copilot.instructions.md
.github/workflows/: ethicalcheck.yml  jscrambler-code-integrity.yml  neuralegion.yml  ossar.yml  python-ci.yml  security-scan.yml
configs/: config.yaml
docs/: ARCHITECTURE.md  CAPABILITY_PROGRESSION.md  CI_CD.md  DEVOPS_SUMMARY.md  FOUR_LAYER_SECRET_ENCODING.md  GENETIC_EVOLUTION.md  ISSUE_ANALYSIS_REPORT.md  KNOWN_LIMITATIONS.md  PR_CLEANUP_QUICKREF.md  PR_CLEANUP_REPORT.md  PR_CLEANUP_SUMMARY.md  REALISTIC_CAPABILITIES.md  ROBUSTNESS_IMPROVEMENTS.md  SKILL_KNOWLEDGE_AFFECTS.md  SYNERGISTIC_SYSTEM.md  TRAINING_GUIDE.md  VARIANT_BREEDING.md  index.md
examples/: basic_audit.py
exploit_db/: chroma.sqlite3
hive_zero_core/: __init__.py  hive_mind.py
hive_zero_core/agents/: __init__.py  ast_mutations.py  attack_experts.py  base_expert.py  blue_team.py  brood_expert.py  capability_escalation.py  chaos_expert.py  defense_experts.py  genetic_evolution.py  genetic_operators.py  multimodal_experts.py  offensive_defense.py  population_evolution.py  post_experts.py  recon_experts.py  red_booster.py  stealth_backpack.py  swarm_fusion.py  variant_archive.py  variant_breeding.py
hive_zero_core/api/: nl_interface.py  server.py
hive_zero_core/api/templates/: index.html
hive_zero_core/brain/: curiosity.py  meta_learner.py  ppo_agent.py  world_model.py
hive_zero_core/comms/: uplink.py
hive_zero_core/data/: __init__.py  advanced_parsers.py
hive_zero_core/environment/: __init__.py  hive_env.py  network_twin.py
hive_zero_core/knowledge/: exploit_db.py  mitre_kb.py
hive_zero_core/logic/: inference.py
hive_zero_core/memory/: __init__.py  foundation.py  graph_store.py  replay_buffer.py  threat_intel_db.py  threat_intelligence.py
hive_zero_core/mitre/: __init__.py  mitre_mapping.py  query_tools.py
hive_zero_core/ops/: resilience.py  swarm_node.py  traffic_shaper.py
hive_zero_core/orchestration/: safety_monitor.py  strategic_planner.py  supervisor.py  xai_explainer.py
hive_zero_core/scanners/: nmap_adapter.py
hive_zero_core/scanners/jscrambler/: analyzer.py
hive_zero_core/security/: __init__.py  access_control.py  audit_logger.py  crypto_utils.py  input_validator.py
hive_zero_core/stealth/: obfuscator.py
hive_zero_core/training/: __init__.py  advanced_rewards.py  adversarial_loop.py  config.py  data_loader.py  rewards.py
hive_zero_core/utils/: __init__.py  config.py  logging_config.py  swarm_pb2.py  swarm_pb2_grpc.py
protos/: swarm.proto
scripts/: README.md  cleanup_duplicate_prs.py  close_duplicate_prs.sh  demo_advanced_evolution.py  demo_genetic_evolution.py  demo_secret_encoding.py  demo_stealth_backpack.py  demo_variant_breeding.py  validate-build.sh
src/: __init__.py
src/agents/: __init__.py  base_agent.py  network_scanner.py
src/orchestration/: __init__.py  coordinator.py
src/security_core/: __init__.py  audit.py  config.py
tests/: conftest.py  test_agents.py  test_basic.py  test_blue_red_intel.py  test_config.py  test_data_loader.py  test_experts.py  test_genetic_evolution.py  test_memory_and_rewards.py  test_mitre.py  test_rewards.py  test_skill_knowledge.py  test_ux.py
tests/unit/: test_security_core.py
tests/unit/core/: test_architecture.py
tests/unit/utils/: test_logging_config.py
