[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adversarial-swarm"
version = "0.1.0"
description = "HIVE-ZERO: Hierarchical Multi-Agent Reinforcement Learning system with adversarial swarm intelligence"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "torch>=2.6,<3.0",
    "torch-geometric>=2.3,<3.0",
    "stable-baselines3>=2.0,<3.0",
    "transformers>=4.48,<6.0",
    "networkx>=3.0,<4.0",
    "scikit-learn>=1.3,<2.0",
    "numpy>=1.24,<2.0",
    "pandas>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
include = ["hive_zero_core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
